--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@schedule-x/vue": "^2.25.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
-    "firebase": "^11.6.0",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
